--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
   font-family: Google Sans, Arial, sans-serif;
   font-weight: 400px;
-  background: linear-gradient(to right, #fff9f5 0%, #fff9f5 100%);
 }
 
 .weather {
@@ -16,7 +15,8 @@
 h1 {
   margin-left: 20px;
 
-  font-size: 50px;
+  font-size: 60px;
+  font-weight: 300;
 }
 li {
   list-style: none;
@@ -37,10 +37,10 @@ img {
   vertical-align: -7px;
 }
 .details {
-  font-size: 14px;
+  font-size: 17px;
 }
 .details-1 {
-  font-size: 22px;
+  font-size: 15px;
 }
 .searchButton {
   width: 500px;
@@ -60,4 +60,21 @@ footer {
   max-width: 800px;
   font-size: 12px;
   text-align: center;
+}
+@media (max-width: 800px) {
+  .weather {
+    max-width: 500px;
+    padding: 0;
+    margin: 0;
+  }
+  .searchButton {
+    width: 300px;
+    height: 35px;
+  }
+  .submitButton {
+    width: 70px;
+  }
+  .container {
+    padding: 10px;
+  }
 }
